fixed 'getting statred'

--- a/submissions/MyNotebook.ipynb
+++ b/submissions/MyNotebook.ipynb
@@ -23,7 +23,7 @@
     "## Table of Contents\n",
     "\n",
     "1. ['Requests' Module](#What-is-the-Requests-module?)\n",
-    "2. [Getting Started / Installs](#Getting-Statrted)\n",
+    "2. [Getting Started / Installs](#Getting-Started)\n",
     "3. [Our Objectives](#...So-what-will-we-be-doing-with-Python-+-HTTP-+-Web?)\n",
     "4. [The Real Action](## Now, let's truly get started)\n",
     "5. [Explanation of Work](#What-we-have-just-done...)\n",
@@ -67,7 +67,7 @@
     "editable": true
    },
    "source": [
-    "# Getting Statrted\n",
+    "# Getting Started\n",
     "\n",
     "Becuase `Requests` is a third-party package, we must install it for Python's disposal. With a few means of acheiving this, our easiest is to leverage the `pip` command. We'll also need `BeautifulSoup` from `bs4` so in a shell instance, type the following:\n",
     "```bash\n",
